Add Grustrag Three defeat event

--- a/example.config.json
+++ b/example.config.json
@@ -79,6 +79,9 @@
         },
         "lichTerritoryMission": {
             "enabled": true
+        },
+        "grustragDefeat": {
+            "enabled": true
         }
     }
 }
