Add profit taker kill event

--- a/example.config.json
+++ b/example.config.json
@@ -82,6 +82,9 @@
         },
         "grustragDefeat": {
             "enabled": true
+        },
+        "profitTakerKill": {
+            "enabled": true
         }
     }
 }
