Add void angel kill event

--- a/example.config.json
+++ b/example.config.json
@@ -95,6 +95,9 @@
         "profitTakerKill": {
             "enabled": true,
             "showTime": true
+        },
+        "voidAngelKill": {
+            "enabled": true
         }
     }
 }
