Add zanuka defeat event

--- a/example.config.json
+++ b/example.config.json
@@ -92,6 +92,9 @@
         "grustragDefeat": {
             "enabled": true
         },
+        "zanukaDefeat": {
+            "enabled": true
+        },
         "profitTakerKill": {
             "enabled": true,
             "showTime": true
