Add duviri circuit dink, fix zanuka

--- a/example.config.json
+++ b/example.config.json
@@ -110,5 +110,9 @@
     },
     "weeklyArchonHunt": {
         "enabled": true
+    },
+    "duviriCircuit": {
+        "enabled": true,
+        "showTime": true
     }
 }
